# inventory-management-django-sistem

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE.txt  README.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  mypy_errors.txt  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml
app/: metrics.py  settings.py  tasks.py  urls.py  views.py
app/services/: export_data.py  import_data.py  metrics.py
app/templates/: base.html  generic_list_pdf.html  home.html
authentication/: urls.py
brands/: admin.py  api_urls.py  forms.py  models.py  serializers.py  urls.py  views.py
brands/migrations/: 0001_initial.py
brands/templates/: brand_create.html  brand_delete.html  brand_detail.html  brand_list.html  brand_update.html
categories/: admin.py  api_urls.py  forms.py  models.py  urls.py  views.py
categories/migrations/: 0001_initial.py
categories/templates/: category_create.html  category_delete.html  category_detail.html  category_list.html  category_update.html
data/synthetic_data/: brands.csv  categories.csv  inflows.csv  outflows.csv  product_models.csv  products.csv  suppliers.csv
docker/: entrypoint.sh
docker/prod/: start.sh
docs/: api.md  architecture.md  async-tasks.md  configuration.md  contributing.md  data-model.md  deployment.md  development.md  features.md  index.md  release-notes.md  roadmap.md  testing.md  use-cases.md
inflows/: admin.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
inflows/migrations/: 0001_initial.py
inflows/templates/: inflow_create.html  inflow_detail.html  inflow_list.html
nginx/: Dockerfile  nginx.conf
notifications/: admin.py  models.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
outflows/: admin.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
outflows/migrations/: 0001_initial.py
outflows/templates/: outflow_create.html  outflow_detail.html  outflow_list.html
product_models/: admin.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
product_models/migrations/: 0001_initial.py
product_models/templates/: product_model_create.html  product_model_delete.html  product_model_detail.html  product_model_list.html  product_model_update.html
products/: admin.py  api_urls.py  forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/templates/: product_create.html  product_delete.html  product_detail.html  product_list.html  product_update.html
scripts/: init-letsencrypt.sh
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/architecture/: index.html
site/async-tasks/: index.html
site/configuration/: index.html
site/contributing/: index.html
site/data-model/: index.html
site/deployment/: index.html
site/development/: index.html
site/features/: index.html
site/release-notes/: index.html
site/roadmap/: index.html
site/search/: search_index.json
site/testing/: index.html
site/use-cases/: index.html
suppliers/: admin.py  api_urls.py  forms.py  models.py  serializers.py  urls.py  views.py
suppliers/migrations/: 0001_initial.py
suppliers/templates/: supplier_create.html  supplier_delete.html  supplier_detail.html  supplier_list.html  supplier_update.html
tests/: conftest.py
tests/app/: test_views.py
tests/authentication/: test_authentication_api.py  test_authentication_forms.py  test_authentication_models.py  test_authentication_permissions.py  test_authentication_serializers.py  test_authentication_urls.py  test_authentication_views.py  test_jwt.py  test_permissions.py
tests/brands/: conftest.py  test_api.py  test_brands_api.py  test_brands_forms.py  test_brands_models.py  test_brands_urls.py  test_brands_views.py  test_forms.py  test_models.py  test_serializers.py  test_views.py
tests/categories/: conftest.py  test_categories_api.py  test_categories_forms.py  test_categories_serializers.py  test_categories_urls.py  test_categories_views.py  test_models.py
tests/factories/: __init__.py  brand_factory.py  category_factory.py  inflow_factory.py  outflow_factory.py  product_factory.py  product_model_factory.py  supplier_factory.py  user_factory.py
tests/inflows/: conftest.py  test_inflows_api.py  test_inflows_forms.py  test_inflows_models.py  test_inflows_serializers.py  test_inflows_signals.py  test_inflows_urls.py  test_inflows_views.py  test_models.py  test_signals.py
tests/integration/: conftest.py  test_api_integration.py  (+1 more)
(+46 files in other folders)
